[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/main_viewport/3d_panel/body_panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/main_viewport/3d_panel/3d_overlay.gd" type="Script" id=3]

[node name="3DOverlay" type="PanelContainer"]
modulate = Color( 1, 1, 1, 0.690196 )
anchor_right = 0.082
anchor_bottom = 0.694
margin_right = 0.279999
margin_bottom = 0.23999
size_flags_vertical = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 72.0
margin_bottom = 368.0

[node name="Label" type="Label" parent="VBox"]
margin_right = 65.0
margin_bottom = 31.0
text = "Visible Parts"
autowrap = true

[node name="BodyPanel" parent="VBox" instance=ExtResource( 1 )]
margin_top = 35.0
margin_right = 65.0
margin_bottom = 163.0

[node name="BodyPanel2" parent="VBox" instance=ExtResource( 1 )]
margin_top = 167.0
margin_right = 65.0
margin_bottom = 295.0

[node name="Label2" type="Label" parent="VBox"]
margin_top = 299.0
margin_right = 65.0
margin_bottom = 313.0
text = "Pose"

[node name="PoseOption" type="OptionButton" parent="VBox"]
margin_top = 317.0
margin_right = 65.0
margin_bottom = 337.0

[node name="HButtonBox" type="HBoxContainer" parent="VBox"]
margin_top = 341.0
margin_right = 65.0
margin_bottom = 361.0
alignment = 1

[node name="ButtonLeft" type="Button" parent="VBox/HButtonBox"]
margin_right = 20.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "<"

[node name="ButtonMin" type="Button" parent="VBox/HButtonBox"]
margin_left = 24.0
margin_right = 41.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "-"

[node name="ButtonRight" type="Button" parent="VBox/HButtonBox"]
margin_left = 45.0
margin_right = 65.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = ">"

[connection signal="pressed" from="VBox/HButtonBox/ButtonLeft" to="." method="_on_ButtonLeft_pressed"]
[connection signal="pressed" from="VBox/HButtonBox/ButtonMin" to="." method="_on_ButtonMin_pressed"]
[connection signal="pressed" from="VBox/HButtonBox/ButtonRight" to="." method="_on_ButtonRight_pressed"]
